HHH-14762 Testsuite: Assert.notNull must not be used on primitive types
Fix https://hibernate.atlassian.net/browse/HHH-14762